netflix/resources/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-1
          image: netflix-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: backend
